lib/ffi-opencl/cl.rb

  attach_function :clCreateKernelsInProgram, [ :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clRetainKernel, [ :pointer ], :int
  attach_function :clReleaseKernel, [ :pointer ], :int
  attach_function :clSetKernelArg, [ :pointer, :uint, :uint, :pointer ], :int
  attach_function :clGetKernelInfo, [ :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clGetKernelWorkGroupInfo, [ :pointer, :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clWaitForEvents, [ :uint, :pointer ], :int
  attach_function :clGetEventInfo, [ :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clRetainEvent, [ :pointer ], :int
  attach_function :clReleaseEvent, [ :pointer ], :int
  attach_function :clGetEventProfilingInfo, [ :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clFlush, [ :pointer ], :int
  attach_function :clFinish, [ :pointer ], :int
  attach_function :clEnqueueReadBuffer, [ :pointer, :pointer, :uint, :uint, :uint, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueWriteBuffer, [ :pointer, :pointer, :uint, :uint, :uint, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueCopyBuffer, [ :pointer, :pointer, :pointer, :uint, :uint, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueReadImage, [ :pointer, :pointer, :uint, :pointer, :pointer, :uint, :uint, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueWriteImage, [ :pointer, :pointer, :uint, :pointer, :pointer, :uint, :uint, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueCopyImage, [ :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueCopyImageToBuffer, [ :pointer, :pointer, :pointer, :pointer, :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueCopyBufferToImage, [ :pointer, :pointer, :pointer, :uint, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueMapBuffer, [ :pointer, :pointer, :uint, :ulong_long, :uint, :uint, :uint, :pointer, :pointer, :pointer ], :pointer
  attach_function :clEnqueueMapImage, [ :pointer, :pointer, :uint, :ulong_long, :pointer, :pointer, :pointer, :pointer, :uint, :pointer, :pointer, :pointer ], :pointer
  attach_function :clEnqueueUnmapMemObject, [ :pointer, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueNDRangeKernel, [ :pointer, :pointer, :uint, :pointer, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueTask, [ :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueNativeKernel, [ :pointer, callback([ :pointer ], :void), :pointer, :uint, :uint, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueMarker, [ :pointer, :pointer ], :int
  attach_function :clEnqueueWaitForEvents, [ :pointer, :uint, :pointer ], :int
  attach_function :clEnqueueBarrier, [ :pointer ], :int
  CL_GL_OBJECT_BUFFER = 0x2000
  CL_GL_OBJECT_TEXTURE2D = 0x2001
  CL_GL_OBJECT_TEXTURE3D = 0x2002
  CL_GL_OBJECT_RENDERBUFFER = 0x2003
  CL_GL_TEXTURE_TARGET = 0x2004
  CL_GL_MIPMAP_LEVEL = 0x2005
  attach_function :clCreateFromGLBuffer, [ :pointer, :ulong_long, :uint, :pointer ], :pointer
  attach_function :clCreateFromGLTexture2D, [ :pointer, :ulong_long, :uint, :int, :uint, :pointer ], :pointer
  attach_function :clCreateFromGLTexture3D, [ :pointer, :ulong_long, :uint, :int, :uint, :pointer ], :pointer
  attach_function :clCreateFromGLRenderbuffer, [ :pointer, :ulong_long, :uint, :pointer ], :pointer
  attach_function :clGetGLObjectInfo, [ :pointer, :pointer, :pointer ], :int
  attach_function :clGetGLTextureInfo, [ :pointer, :uint, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueAcquireGLObjects, [ :pointer, :uint, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :clEnqueueReleaseGLObjects, [ :pointer, :uint, :pointer, :uint, :pointer, :pointer ], :int

end
